--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        //1 piedra, 2 papel, 3 tijera
+        let jugador = 0
+        let pc = 2
+        jugador = prompt("Escoge: 1 para piedra, 2 para papel, 3 para tijera")
+        alert("Elegistes " + jugador)
+    </script>
 </head>
+
 <body>
-    
+    <h1>Juego piedra papel y tijera</h1>
 </body>
+
 </html>
